--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-google-oauth20": "^2.0.0",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "nodemailer": "^6.9.13"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
