--- a/package.json
+++ b/package.json
@@ -8,18 +8,18 @@
     "dev": "nodemon server-azure.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
-    "multer": "^1.4.5-lts.1",
-    "bcrypt": "^5.1.1",
-    "jsonwebtoken": "^9.0.2",
-    "pg": "^8.11.3",
     "@azure/storage-blob": "^12.17.0",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "passport-google-oauth20": "^2.0.0",
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "nodemailer": "^6.9.13"
+    "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.13",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
