--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A POC for Golf Club Interactive Screen and CMS system",
   "main": "server-azure.js",
   "scripts": {
-    "start": "node minimal-server-test.js",
+    "start": "node progressive-server-test.js",
+    "start-minimal": "node minimal-server-test.js", 
     "start-full": "node server-azure.js",
     "dev": "nodemon server-azure.js"
   },
