--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "A POC for Golf Club Interactive Screen and CMS system",
   "main": "server-azure.js",
   "scripts": {
-    "start": "node progressive-server-test.js",
+    "start": "node server-azure.js",
     "start-minimal": "node minimal-server-test.js", 
-    "start-full": "node server-azure.js",
+    "start-progressive": "node progressive-server-test.js",
     "dev": "nodemon server-azure.js"
   },
   "dependencies": {
