Deploy ultra-safe diagnostic server to identify crash cause
- Created safe-server.js with comprehensive error catching
- Catches all uncaught exceptions and unhandled rejections
- Minimal functionality to prove server can start and respond
- Emergency fallback server if main initialization fails
- Continuous heartbeat logging to monitor server health

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A POC for Golf Club Interactive Screen and CMS system",
   "main": "server-azure.js",
   "scripts": {
-    "start": "node server-azure.js",
+    "start": "node safe-server.js",
+    "start-full": "node server-azure.js",
     "start-minimal": "node minimal-server-test.js", 
     "start-progressive": "node progressive-server-test.js",
     "dev": "nodemon server-azure.js"
