--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A POC for Golf Club Interactive Screen and CMS system",
   "main": "server-azure.js",
   "scripts": {
-    "start": "node diagnostic-server.js",
+    "start": "node robust-server.js",
+    "start-diagnostic": "node diagnostic-server.js",
     "start-safe": "node safe-server.js",
     "start-full": "node server-azure.js",
     "start-minimal": "node minimal-server-test.js", 
