--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A POC for Golf Club Interactive Screen and CMS system",
   "main": "server-azure.js",
   "scripts": {
-    "start": "node ultra-minimal-server.js",
+    "start": "node pure-node-server.js",
+    "start-ultra": "node ultra-minimal-server.js",
     "start-robust": "node robust-server.js",
     "start-diagnostic": "node diagnostic-server.js",
     "start-safe": "node safe-server.js",
