Add minimal Express server for Azure deployment
- minimal-express-server.js with health check and root endpoint
- updated start script in package.json
- installed express dependency

--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "A POC for Golf Club Interactive Screen and CMS system",
   "main": "server-azure.js",
   "scripts": {
-    "start": "node pure-node-server.js",
+    "start": "node minimal-express-server.js",
     "start-ultra": "node ultra-minimal-server.js",
     "start-robust": "node robust-server.js",
     "start-diagnostic": "node diagnostic-server.js",
     "start-safe": "node safe-server.js",
     "start-full": "node server-azure.js",
-    "start-minimal": "node minimal-server-test.js", 
+    "start-minimal": "node minimal-server-test.js",
     "start-progressive": "node progressive-server-test.js",
     "dev": "nodemon server-azure.js"
   },
@@ -18,7 +18,7 @@
     "@azure/storage-blob": "^12.17.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "^4.21.2",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
