Add Express server with PostgreSQL connectivity
- express-db-server.js with health check and db-test endpoint
- updated start script in package.json to use new server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A POC for Golf Club Interactive Screen and CMS system",
   "main": "server-azure.js",
   "scripts": {
-    "start": "node minimal-express-server.js",
+  "start": "node express-db-server.js",
     "start-ultra": "node ultra-minimal-server.js",
     "start-robust": "node robust-server.js",
     "start-diagnostic": "node diagnostic-server.js",
