--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "A POC for Golf Club Interactive Screen and CMS system",
   "main": "server-azure.js",
   "scripts": {
-  "start": "node express-db-server.js",
+    "start": "node azure-health-server.js",
+    "start-express": "node minimal-test.js",
+    "start-full": "node server-azure.js",
+    "start-debug": "node azure-debug-server.js",
+    "start-original": "node server-azure.js",
+    "start-test": "node test-server.js",
     "start-ultra": "node ultra-minimal-server.js",
     "start-robust": "node robust-server.js",
     "start-diagnostic": "node diagnostic-server.js",
     "start-safe": "node safe-server.js",
-    "start-full": "node server-azure.js",
-    "start-minimal": "node minimal-server-test.js",
     "start-progressive": "node progressive-server-test.js",
     "dev": "nodemon server-azure.js"
   },
