Deploy basic-http-server.js - testing minimal Node.js server
- Switching from ultra-debug-server.js to basic-http-server.js
- Ultra-debug failed to create log files - indicates Node.js runtime crash
- Basic server uses only Node.js built-ins, no dependencies
- Will test if Azure issue is with complex code vs fundamental Node.js support
- Basic server confirmed working locally with immediate startup

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A POC for Golf Club Interactive Screen and CMS system",
   "main": "server-azure.js",
   "scripts": {
-    "start": "node ultra-debug-server.js",
+    "start": "node basic-http-server.js",
     "start-express": "node minimal-test.js",
     "start-full": "node server-azure.js",
     "start-debug": "node azure-debug-server.js",
