--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "golf-club-interactive-screen-poc",
   "version": "1.0.0",
   "description": "A POC for Golf Club Interactive Screen and CMS system",
-  "main": "server-azure.js",
+  "main": "basic-http-server.js",
   "scripts": {
     "start": "node basic-http-server.js",
     "start-express": "node minimal-test.js",
