--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "golf-club-interactive-screen-poc",
   "version": "1.0.0",
   "description": "A POC for Golf Club Interactive Screen and CMS system",
-  "main": "basic-http-server.js",
+  "main": "azure-working-server.js",
   "scripts": {
-    "start": "node basic-http-server.js",
+    "start": "node azure-working-server.js",
     "start-express": "node minimal-test.js",
     "start-full": "node server-azure.js",
     "start-debug": "node azure-debug-server.js",
